addad new file.yaml and improved the functions of services and controllers
